# pxx

./: -o  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  COMPATIBILITY.md  CONTRIBUTING.md  C_INTEROP.md  LICENSE.md  Makefile  README.md  SYMBOLS.md  a.out  demos.sh  developer_notes.md  directions.md  expand.py  handover.md  install.sh  t_rw.lfm  t_rw.pas  trackt
agents/: AGENTS.md  CLAUDE.md  debug-tools.md  handover_notes.md  next_agent_prompt.md  progress-tracker-design.md
bench/: 2026-05-26-vs-fpc.md  2026-06-02-runtime-gate.md
benchmarks/: 2026-05-25-self-hosting.md  2026-06-02-vs-fpc.md  2026-06-03-compiler-runtime.md  2026-06-05-lazy-var.md  2026-06-11-vs-fpc.md  2026-07-11-o3-operand-scheduler.md
codemap/: symbols.md
compiler/: alexer.inc  aparser.inc  asmdisasm_x64.inc  asmenc.inc  asmfront.inc  asmtext.inc  asmtext_386.inc  asmtext_a64.inc  asmtext_arm32.inc  asmtext_rv32.inc  asmtext_xtensa.inc  blexer.inc  bparser.inc  classes_lite.pas  clexer.inc  codegen.inc  compiler  compiler.pas  coroutine_emit.inc  cparser.inc  cpreproc.inc  defs.inc  elexer.inc  elfwriter.inc  emit.inc  eparser.inc  exception_emit.inc  flexer.inc  forwards.inc  fparser.inc  glexer.inc  gparser.inc  ir.inc  ir_codegen.inc  ir_codegen386.inc  ir_codegen_aarch64.inc  ir_codegen_arm32.inc  ir_codegen_riscv32.inc  ir_codegen_xtensa.inc  lexer.inc  (+26 more)
devdocs/: README.md  index.md  naming-poll-final.md  naming-poll.md  naming-round1.md  not-stable.md
docs/: README.md  acronyms.md  allocator-platform-design.md  architecture.md  c-importing-robustness-report.md  c-interop.md  cli.md  compatibility.md  dialect.md  esp32-esp-idf-roadmap.md  exceptions-plan.md  feature-matrix.md  features.md  gui.md  handover-default-keyword-2026-06-05.md  handover-final-mile.md  handover-managed-strings-record-layout-2026-06-05.md  handover-next-work.md  handover-nilpy-c-binding-2026-06-02.md  handover-sis-ai-2026-06-02.md  handover-wrapper-free-nilpy-c-2026-06-03.md  implementation-plan.md  index.md  inline-asm.md  ir-handover.md  language-status.md  (+29 more)
examples/esp32/hello-s3/main/: CMakeLists.txt  main.pas
examples/esp32/net-c3/main/: CMakeLists.txt  main.pas
examples/esp32/timer-c3/main/: CMakeLists.txt  main.pas
(+6913 files in other folders)
